2008-03-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7834: htmlArea RTE block operations may produce invalid document structure

2008-03-11  Ingo Renner  <ingo@typo3.org>

	* fixed bug #7816: New page icon does not honor a selected page, credits Steffen Kamper

2008-03-11  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7794: opendocs causes Javascript error in Internet Explorer (thanks to Steffen Kamper)
	* Fixed bug #7781: Constant Editor changes not saved in Internet Explorer

2008-03-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7810: t3skin: Cleanup of login stylesheet (thanks to Georg Ringer)
	* Fixed bug #7814: t3skin does not use proper icons

2008-03-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7682: import extension page CSS errors (thanks to Steffen Kamper for hard work on this patch)

2008-03-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7748: IRRE - Storage page for combined child records not used
	* Fixed bug #7511: IRRE - Issues with expand/collapse of child records

2008-03-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Follow up on bug #7588: respect TSConfig settings for cache clearing (patch by Helmut Hummel)

2008-03-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Added two icons to htmlArea RTE skin for definition lists
	* Cleaned up dead code related to htmlArea RTE popups
	* Fixed bug #7788: htmlArea RTE: pageTSConfig from Inline Elements extension not included

2008-03-06  Ingo Renner  <ingo@typo3.org>

	* Post cleanup of topapps, some parts were not removed with Changeset 2908

2008-03-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7757: htmlArea RTE: Alternating table rows/columns should start at 1
	* Fixed bug #7770: htmlArea RTE: shift+tab in table body does not move back into thead
	* Fixed bug #7773: htmlArea RTE loads plugins in wrong order
	* Fixed bug #7774: htmlArea RTE: toolbar not updated in IE7 on up/right/down/left arrow
	* Cleaned up dead code related to htmlArea RTE clickenlarge feature
