@@ -38,8 +38,9 @@ table.typo3-dblist td.c-table-row-spacer {
 	display: none;
 }
 
-table.typo3-dblist tr:hover {
-	background-color: #EFEFF4;
+table.typo3-dblist tr:hover,
+table.typo3-dblist tr:hover td.db_list_alt {
+	background-color: #d7dbe2;
 }
 
 table.typo3-dblist tr td div.typo3-DBctrl {
