@@ -1,10 +1,14 @@
+2008-03-12  Ingo Renner  <ingo@typo3.org>
+
+	* Fixed bug #7730: No hover in listview, credits Georg Ringer
+
 2008-03-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #7834: htmlArea RTE block operations may produce invalid document structure
 
 2008-03-11  Ingo Renner  <ingo@typo3.org>
 
-	* fixed bug #7816: New page icon does not honor a selected page, credits Steffen Kamper
+	* Fixed bug #7816: New page icon does not honor a selected page, credits Steffen Kamper
 
 2008-03-11  Jeff Segars  <jeff@webempoweredchurch.org>
 
